--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -38,9 +38,8 @@
         </dependency>
         <dependency>
             <groupId>de.flapdoodle.embed</groupId>
-            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <artifactId>de.flapdoodle.embed.mongo.spring3x</artifactId>
             <version>4.13.0</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
